objects/IdMatrix_Rules_Result__c.object
<CustomObject>
    <fields>
        <fullName>Indicator__c</fullName>
        <label>Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veda_IdMatrix__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Veda IdMatrix</label>
        <referenceTo>Veda_IdMatrix__c</referenceTo>
        <relationshipLabel>IdMatrix Rules Results</relationshipLabel>
        <relationshipName>IdMatrix_Rules_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>name__c</fullName>
        <label>name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IdMatrix Rules Result</label>
    <nameField>
        <label>Rules Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IdMatrix Rules Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>